hphp/hack/test/infer_return_types/fake_members.php.exp
\C::getX : int try int
\D::getX : int try int
\F::getX : ?[unresolved], int try ?int
\G::getX : ?[unresolved], int try ?int
File "fake_members.php", line 35, characters 3-17:
Cannot declare abstract method D::getX private (Parsing[1002])
